--- a/index.html
+++ b/index.html
@@ -1,25 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- font awesome and google fonts -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet" />
-    
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous"
+      rel="stylesheet"
+    />
+
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
-
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>Guess The Lyrics!</title>
-</head>
-<body>
+  </head>
+
+  <body>
+    <div class="quiz-container" id="quiz">
+      <div class="quiz-content">
+        <h2 id="quiz-title">Can you guess the right lyrics?</h2>
+        <h3 id="starting-lyrics">First Lyrics</h3>
+        <ul>
+          <li>
+            <input type="radio" name="answer" id="option1" class="answer" />
+            <label for="option1" id="option1-text">Answer 1</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" id="option2" class="answer" />
+            <label for="option2" id="option2-text">Answer 2</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" id="option3" class="answer" />
+            <label for="option3" id="option3-text">Answer 3</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" id="option4" class="answer" />
+            <label for="option4" id="option4-text">Answer 4</label>
+          </li>
+        </ul>
+      </div>
+
+      <button id="submit">Submit Answer</button>
+    </div>
 
     <script src="assets/js/script.js"></script>
-    
-</body>
+  </body>
 </html>
