--- a/index.html
+++ b/index.html
@@ -18,38 +18,23 @@
 
     <title>Guess The Lyrics!</title>
   </head>
-
   <body>
-    <div id="quiz">
-      <h2 id="quiz-title">Can you guess the right lyrics?</h2>
-      <div class="quiz-container">
-        <h3 id="starting-lyrics">First Lyrics</h3>
-        <ul>
-          <li>
-            <input type="radio" name="answer" id="option1" class="answer" />
-            <label for="option1" id="option1-text">Answer 1</label>
-          </li>
-          <li>
-            <input type="radio" name="answer" id="option2" class="answer" />
-            <label for="option2" id="option2-text">Answer 2</label>
-          </li>
-          <li>
-            <input type="radio" name="answer" id="option3" class="answer" />
-            <label for="option3" id="option3-text">Answer 3</label>
-          </li>
-          <li>
-            <input type="radio" name="answer" id="option4" class="answer" />
-            <label for="option4" id="option4-text">Answer 4</label>
-          </li>
-        </ul>
-        <button id="submit">Submit Answer</button>
-      </div>
-      <div id="scores">
-        <div id="score-correct">Correct Answers 0</div>
-        <div id="score-incorrect">Incorrect Answers 0</div>
+    <div class="container">
+      <div id="intro-page" class="flex-column flex-center">
+        <h1>CAN YOU FINISH THE LYRICS?</h1>
+        <h2>Test your knowledge and finish off the lyrics!</h2>
+
+        <!--Play game button section that redirects user to quiz-->
+        <button
+          class="play-btn"
+          type="submit"
+          onClick="location.href ='quiz.html';"
+          style="margin: auto; display: block"
+        >
+          Play Quiz!
+        </button>
       </div>
     </div>
-
     <script src="assets/js/script.js"></script>
   </body>
 </html>
