added bg image and header styling to both pages

--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
     <title>Guess The Lyrics!</title>
   </head>
   <body>
-    <div class="container">
-      <div id="intro-page" class="flex-column flex-center">
-        <h1>CAN YOU FINISH THE LYRICS?</h1>
+
+    <header>
+        <h1 class="heading">
+            <a href="index.html" aria-label="Go to the quiz home page">Guess the lyrics Quiz!</a>
+        </h1>
+    </header>
+
+    <div>
+      <div>
         <h2>Test your knowledge and finish off the lyrics!</h2>
 
-        <!--Play game button section that redirects user to quiz-->
+        <!--Play quiz button directing user to quiz on the quiz.html page-->
         <button
           class="play-btn"
           type="submit"
