--- a/quiz.html
+++ b/quiz.html
@@ -1,64 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,200;1,9..40,200&display=swap"
-        rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,200;1,9..40,200&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>Guess The Lyrics!</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1 class="heading">
-            <a href="index.html" aria-label="Go to the quiz home page">Can you guess the right lyrics?</a>
-        </h1>
+      <h1 class="heading">
+        <a href="index.html" aria-label="Go to the quiz home page"
+          >Guess the lyrics Quiz!</a
+        >
+      </h1>
     </header>
+
     <br />
+
     <div id="quiz">
-        <h2 id="quiz-title">
-            Finish the lyrics by selecting the from one of the options below
-        </h2>
-        <div class="quiz-container">
-            <h3 id="starting-lyrics">First Lyrics</h3>
-            <ul>
-                <li>
-                    <input type="radio" name="answer" id="option1" class="answer" />
-                    <label for="option1" id="option1-text">Answer 1</label>
-                </li>
-                <li>
-                    <input type="radio" name="answer" id="option2" class="answer" />
-                    <label for="option2" id="option2-text">Answer 2</label>
-                </li>
-                <li>
-                    <input type="radio" name="answer" id="option3" class="answer" />
-                    <label for="option3" id="option3-text">Answer 3</label>
-                </li>
-                <li>
-                    <input type="radio" name="answer" id="option4" class="answer" />
-                    <label for="option4" id="option4-text">Answer 4</label>
-                </li>
-            </ul>
-            <button id="submit">Submit Answer</button>
-        </div>
-        <br />
-        <div id="scores">
-            <div id="score-correct">Correct Answers 0</div>
-            <div id="score-incorrect">Incorrect Answers 0</div>
-        </div>
+      <h2>
+        Finish the lyrics by selecting the from one of the options below
+      </h2>
+      <div>
+        <h3>First Lyrics</h3>
+        <ul>
+          <li>
+            <input type="radio" name="answer" id="option1" class="answer" />
+            <label for="option1" id="option1-text">Answer 1</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" id="option2" class="answer" />
+            <label for="option2" id="option2-text">Answer 2</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" id="option3" class="answer" />
+            <label for="option3" id="option3-text">Answer 3</label>
+          </li>
+          <li>
+            <input type="radio" name="answer" id="option4" class="answer" />
+            <label for="option4" id="option4-text">Answer 4</label>
+          </li>
+        </ul>
+        <button id="submit">Submit Answer</button>
+      </div>
+      <br />
+      <div id="scores">
+        <div id="score-correct">Correct Answers 0</div>
+        <div id="score-incorrect">Incorrect Answers 0</div>
+      </div>
     </div>
 
     <script src="assets/js/script.js"></script>
-</body>
-
+  </body>
 </html>
