added content area, styled home page and game

--- a/index.html
+++ b/index.html
@@ -19,23 +19,27 @@
     <title>Guess The Lyrics!</title>
   </head>
   <body>
-
     <header>
-        <h1 class="heading">
-            <a href="index.html" aria-label="Go to the quiz home page">Guess the lyrics Quiz!</a>
-        </h1>
+      <h1 class="heading">
+        <a href="index.html" aria-label="Go to the quiz home page"
+          >Guess the lyrics Quiz!</a
+        >
+      </h1>
     </header>
 
     <div>
-      <div>
+      <div class="content-area">
         <h2>Test your knowledge and finish off the lyrics!</h2>
+        <br />
+        <p>How many can you get right?</p>
+        <br />
 
         <!--Play quiz button directing user to quiz on the quiz.html page-->
         <button
           class="play-btn"
           type="submit"
           onClick="location.href ='quiz.html';"
-          style="margin: auto; display: block"
+          style="display: block"
         >
           Play Quiz!
         </button>
