added quiz questions and answers to script.js

--- a/quiz.html
+++ b/quiz.html
@@ -30,7 +30,7 @@
 
     <br />
 
-    <div class="container">
+    <div>
       <div class="content-area">
         <h2>
           Finish the lyrics by selecting the correct ending from one of the
