added functions and variables to display question and answers

--- a/quiz.html
+++ b/quiz.html
@@ -35,31 +35,18 @@
         Finish the lyrics by selecting the correct ending from one of the
         options below
       </h2>
-      <h3 id="lyrics">
-        "He was a boy, she was a girl, can I make it any more obvious? He was a
-        ________, she did ballet what more can I say?"
-      </h3>
-      <div id="answer-btns">
+      <h3 id="lyrics"></h3>
+      <div id="answer-buttons">
         <button class="btn">Answer 1</button>
         <button class="btn">Answer 2</button>
         <button class="btn">Answer 3</button>
         <button class="btn">Answer 4</button>
       </div>
-      <!--Submits users answer choice-->
-      <button
-        id="submit"
-        class="submit-btn"
-        type="submit"
-        style="display: block"
-      >
-        Submit Answer
+      <!--Submits users answer choice moving them to the next question-->
+      <button id="next-btn" class="submit-btn" style="display: block">
+        Next
       </button>
     </div>
-    <div id="score-area">
-      <div id="score-correct" class="scores">Correct Answers 0</div>
-      <div id="score-incorrect" class="scores">Incorrect Answers 0</div>
-    </div>
-
     <script src="assets/js/script.js"></script>
   </body>
 </html>
