add content to home page for scoring

--- a/index.html
+++ b/index.html
@@ -31,9 +31,16 @@
       <div class="content-area">
         <h2>Test your knowledge and finish off the lyrics!</h2>
         <br />
+        <p>
+          Read the lyrics and select the correct answer from the options to fill
+          in the blank space.
+        </p>
         <p>How many can you get right?</p>
         <br />
-
+        <p>1 - 4 Not so good!</p>
+        <p>5 - 10 Good Job!</p>
+        <p>10 - 13 So Close!</p>
+        <p>14 Lyrical Genius!</p>
 
         <!--Play quiz button directing user to quiz on the quiz.html page-->
         <button
