add meta description and keywords

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Quiz game for finishing the lyrics. A selection of lyrics will be provided with a blankk section for you to complete. Choose from the multiple choice answers to fill in the correct blank"/>
+    <meta
+      name="keywords"
+      content="quiz, lyrics quiz, music, lyrics, game, games."/>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
