add html testing info to readme

--- a/quiz.html
+++ b/quiz.html
@@ -26,7 +26,7 @@
     <br />
 
     <div class="content-area" id="quiz">
-      <h3 id="lyrics"></h3>
+      <h3 id="lyrics">Loading Lyrics</h3>
       <div id="answer-buttons">
         <button class="btn">Answer 1</button>
         <button class="btn">Answer 2</button>
