add readME content headers and text

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Quiz game for finishing the lyrics. A selection of lyrics will be provided with a blankk section for you to complete. Choose from the multiple choice answers to fill in the correct blank"/>
+      content="Quiz game for finishing the lyrics. A selection of lyrics will be provided with a blankk section for you to complete. Choose from the multiple choice answers to fill in the correct blank"
+    />
     <meta
       name="keywords"
-      content="quiz, lyrics quiz, music, lyrics, game, games."/>
+      content="quiz, lyrics quiz, music, lyrics, game, games."
+    />
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
@@ -52,6 +54,5 @@
         </button>
       </div>
     </div>
-    <script src="assets/js/script.js"></script>
   </body>
 </html>
