add comments to html files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Description and keywords for browsers -->
     <meta
       name="description"
       content="Quiz game for finishing the lyrics. A selection of lyrics will be provided with a blankk section for you to complete. Choose from the multiple choice answers to fill in the correct blank"
@@ -12,14 +14,19 @@
       name="keywords"
       content="quiz, lyrics quiz, music, lyrics, game, games."
     />
-
+    <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
+    <!-- Link to stylesheet css -->
     <link rel="stylesheet" href="assets/css/style.css" />
 
+    <!-- Page Title -->
     <title>Guess The Lyrics!</title>
-  </head>
-  <body>
+    </head>
+  
+  
+    <body>
+    <!-- Page Header -->
     <header>
       <h1 class="heading">
         <a href="index.html" aria-label="Go to the quiz home page"
@@ -28,6 +35,7 @@
       </h1>
     </header>
 
+    <!-- Quiz home page area, shows description of game to user -->
     <div class="content-area">
       <div>
         <h2>Test your knowledge and finish off the lyrics!</h2>
@@ -43,7 +51,7 @@
         <p>10 - 13 So Close!</p>
         <p>14 Lyrical Genius!</p>
 
-        <!--Play quiz button directing user to quiz on the quiz.html page-->
+        <!-- Play quiz button directing user to quiz on the quiz.html page -->
         <button
           class="play-btn"
           type="submit"
