--- a/quiz.html
+++ b/quiz.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Description and keywords for browsers -->
     <meta name="description"
         content="Quiz game for finishing the lyrics. A selection of lyrics will be provided with a blankk section for you to complete. Choose from the multiple choice answers to fill in the correct blank" />
     <meta name="keywords" content="quiz, lyrics quiz, music, lyrics, game, games." />
-
+    <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
+    <!-- Link to stylesheet css -->
     <link rel="stylesheet" href="assets/css/style.css" />
 
+    <!-- Page Title -->
     <title>Guess The Lyrics!</title>
-  </head>
+</head>
 
   <body>
+    <!-- Page Header -->
     <header>
       <h1 class="heading">
         <a href="index.html" aria-label="Go to the quiz home page"
@@ -26,6 +32,8 @@
 
     <br />
 
+    <!-- Quiz Area, displaying question and answers -->
+
     <div class="content-area" id="quiz">
       <h2 id="lyrics">Loading Lyrics</h2>
       <div id="answer-buttons">
@@ -34,11 +42,14 @@
         <button class="btn">Answer 3</button>
         <button class="btn">Answer 4</button>
       </div>
-      <!--Submits users answer choice moving them to the next question-->
+
+      <!-- Submits users answer choice moving them to the next question -->
       <button id="next-btn" class="submit-btn" style="display: block">
         Next
       </button>
     </div>
+
+    <!-- JavaScript file -->
     <script src="assets/js/script.js"></script>
   </body>
 </html>
