--- a/404.html
+++ b/404.html
@@ -26,9 +26,9 @@
     <main class="container">
         <h1>404 - Page Not Found</h1>
 
-        <img src="assets/images/404-error.png" alt="sad face emoji with headphones" class="404-img">
+        <img src="assets/images/404-error.png" alt="sad face emoji with headphones" class="error-img">
 
-        <p>The page you have requested cannot be found! Please click <a href="index.html">HERE</a> to go back.
+        <p>The page you have requested cannot be found! Please click <a href="index.html" class="here">HERE</a> to go back.
         
         </p>
 
