--- a/404.html
+++ b/404.html
@@ -23,7 +23,8 @@
 
     <!-- 404 Page image and text directing user back to website -->
 
-    <main class="container">
+    <main class="content-area">
+        
         <h1>404 - Page Not Found</h1>
 
         <img src="assets/images/404-error.png" alt="sad face emoji with headphones" class="error-img">
