add further styling to 404 page

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 
     <!-- 404 Page image and text directing user back to website -->
 
-    <main class="content-area">
+    <main class="container content-area">
         
         <h1>404 - Page Not Found</h1>
 
