final spell check done on readme after updates

--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <!-- 404 Page image and text directing user back to website home page -->
+    <!-- 404 Page content showing icon and text directing user back to website home page -->
 
     <main class="container content-area">
         
