Add function for timer. Add section to html for timer and styling in css

--- a/quiz.html
+++ b/quiz.html
@@ -47,6 +47,14 @@
       <button id="next-btn" class="submit-btn" style="display: block">
         Next
       </button>
+
+      </button>
+        <!--Container to display timer-->
+        <div id="timer-container">
+          <p id="timer">
+            Timer: <span id="minutes">0</span>:<span id="seconds">0</span>
+          </p>
+        </div>
     </div>
 
     <!-- JavaScript file -->
