Change margin for submit button

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
         <h2>Test your knowledge and finish off the lyrics!</h2>
         <br />
         <p>
-          Read the lyrics and select the correct answer from the options to fill
+          Read the lyrics and try to choose the correct answer from the options given to fill
           in the blank space.
         </p>
+        <p>Test your knowledge against the clock!</p>
         <p>How many can you get right?</p>
         <br />
 
