Add footer to index and quiz.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- Link to stylesheet css -->
     <link rel="stylesheet" href="assets/css/style.css" />
 
+    <!-- Font Awesome link for icons -->
+    <script src="https://kit.fontawesome.com/a66e85d117.js" crossorigin="anonymous"></script>
+
     <!-- Page Title -->
     <title>Guess The Lyrics!</title>
     </head>
@@ -59,5 +62,19 @@
         </button>
       </div>
     </div>
+    <!--Footer-->
+    <footer id="footer">
+        <ul id="socials">
+            <li>
+                <a href="https://github.com/philtipping31" id="github" target="_blank" rel="noopener"
+                    aria-label="Go to my GitHub repository!(Link opens in a new tab)"><i class="fab fa-github fa-xl"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/phil-tipping-925910197/" id="linkedin" target="_blank" rel="noopener"
+                    aria-label="Go to my LinkedIn!(Link opens in a new tab)"><i class="fab fa-linkedin fa-xl"></i></a>
+            </li>
+        </ul>
+    </footer>
+
   </body>
 </html>
