Add lyrics.js and put questions in seperate file, add more questions

--- a/quiz.html
+++ b/quiz.html
@@ -73,6 +73,7 @@
     </footer>
 
     <!-- JavaScript file -->
+    <script src="assets/js/lyrics.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
