Add question and question number text to showQuestion

--- a/quiz.html
+++ b/quiz.html
@@ -44,6 +44,7 @@
                 Timer: <span id="minutes">0</span>:<span id="seconds">0</span>
             </p>
         </div>
+      <p id="question-no"></p> 
       <h2 id="lyrics">Loading Lyrics</h2>
       <div id="answer-buttons">
         <button class="btn">Answer 1</button>
