Add enter your name section to index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         </p>
         <p>Test your knowledge against the clock!</p>
         <p>How many can you get right?</p>
+        <label for="name"></label>
+        <input type="text" id="name" placeholder="Enter Your Name Here" maxlength="15" required/>
         <br />
 
         <!-- Play quiz button directing user to quiz on the quiz.html page -->
