Remove name section

--- a/index.html
+++ b/index.html
@@ -49,13 +49,11 @@
         </p>
         <p>Test your knowledge against the clock!</p>
         <p>How many can you get right?</p>
-        <label for="name"></label>
-        <input type="text" id="name" placeholder="Enter Your Name Here" maxlength="15" required/>
         <br />
 
         <!-- Play quiz button directing user to quiz on the quiz.html page -->
         <button
-          class="play-btn"
+          id="play-btn"
           type="submit"
           onClick="location.href ='quiz.html';"
           style="display: block"
@@ -77,6 +75,5 @@
             </li>
         </ul>
     </footer>
-
   </body>
 </html>
